--- a/create-listing.html
+++ b/create-listing.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login - Bid & buy</title>
+    <title>Create listing</title>
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -122,17 +122,29 @@
           </div>
         </nav>
       </header>
-      <section class="container login__form-section bg-white">
-        <h1>Login</h1>
+      <section class="container create-listing__form-section bg-white">
+        <h1>Create auction</h1>
         <form>
-          <div class="login__message-container"></div>
+          <div class="create-listing__message-container"></div>
           <div>
-            <label for="email" class="form-label mt-3">Email</label>
-            <input type="email" id="email" class="form-control mb-4" />
+            <label for="title" class="form-label mt-3">Title</label>
+            <input type="text" id="title" class="form-control mb-4" />
           </div>
           <div>
-            <label for="password" class="form-label"> Password</label>
-            <input type="password" id="password" class="form-control mb-4" />
+            <label for="description" class="form-label">Description</label>
+            <input type="message" id="description" class="form-control mb-4" />
+          </div>
+          <div>
+            <label for="tags" class="form-label">Tags (optional)</label>
+            <input type="text" id="tags" class="form-control mb-4" />
+          </div>
+          <div>
+            <label for="media" class="form-label">Media (URL)</label>
+            <input type="text" id="media" class="form-control mb-4" />
+          </div>
+          <div>
+            <label for="title" class="form-label">Ends at</label>
+            <input type="datetime-local" id="title" class="form-control mb-4" />
           </div>
           <button class="btn btn-primary mt-2">Login</button>
         </form>
