Worked on all of the pages

--- a/sign-up.html
+++ b/sign-up.html
@@ -128,25 +128,39 @@
           <div class="sign-up__message-container"></div>
           <div>
             <label for="name" class="form-label mt-3">Name</label>
-            <input type="text" id="name" class="form-control mb-4" />
+            <input
+              type="text"
+              id="name"
+              class="form-control mb-4"
+              required
+              minlength="2"
+            />
           </div>
           <div>
             <label for="email" class="form-label">Email</label>
-            <input type="email" id="email" class="form-control mb-4" />
+            <input type="email" id="email" class="form-control mb-4" required />
           </div>
           <div>
-            <label for="password" class="form-label"> Password</label>
-            <input type="password" id="password" class="form-control mb-4" />
+            <label for="password" class="form-label"
+              >Password (at least 8 characters)</label
+            >
+            <input
+              type="password"
+              id="password"
+              class="form-control mb-4"
+              required
+              minlength="8"
+            />
           </div>
           <div>
             <label for="avatar" class="form-label">Avatar (URL)</label>
-            <input type="text" id="avatar" class="form-control mb-4" />
+            <input type="text" id="avatar" class="form-control mb-4" required />
           </div>
           <button class="btn btn-primary mt-2">Sign up</button>
         </form>
       </section>
     </div>
-    <footer class="mx-auto"></footer>
+    <footer></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
       integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
