--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
       </section>
     </div>
-    <footer class="mx-auto"></footer>
+    <footer></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
       integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
