Working on all of the pages

--- a/create-listing.html
+++ b/create-listing.html
@@ -132,7 +132,13 @@
           </div>
           <div>
             <label for="description" class="form-label">Description</label>
-            <input type="message" id="description" class="form-control mb-4" />
+            <textarea
+              id="description"
+              name="description"
+              rows="5"
+              cols="33"
+              class="form-control mb-4"
+            ></textarea>
           </div>
           <div>
             <label for="tags" class="form-label">Tags (optional)</label>
