--- a/login.html
+++ b/login.html
@@ -124,15 +124,19 @@
       </header>
       <section class="container login__form-section bg-white">
         <h1>Login</h1>
-        <form>
+        <form class="login__form">
           <div class="login__message-container"></div>
           <div>
-            <label for="email" class="form-label mt-3">Email</label>
-            <input type="email" id="email" class="form-control mb-4" />
+            <label for="login-email" class="form-label mt-3">Email</label>
+            <input type="email" id="login-email" class="form-control mb-4" />
           </div>
           <div>
-            <label for="password" class="form-label"> Password</label>
-            <input type="password" id="password" class="form-control mb-4" />
+            <label for="login-password" class="form-label"> Password</label>
+            <input
+              type="password"
+              id="login-password"
+              class="form-control mb-4"
+            />
           </div>
           <button class="btn btn-primary mt-2">Login</button>
         </form>
