Worked on all of the pages

--- a/auction-details.html
+++ b/auction-details.html
@@ -23,6 +23,7 @@
       <header class="fixed-top">
         <div class="menu-container"></div>
       </header>
+      <div id="account-info-container"></div>
       <section class="container auction__main-section bg-white">
         <div class="auction__heading-and-images">
           <h1>Auction title</h1>
