--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <header class="fixed-top">
         <div class="menu-container"></div>
       </header>
+      <div id="account-info-container"></div>
       <section class="container featured-auctions-section bg-white">
         <h1>Featured auctions</h1>
         <div class="container">
