--- a/login.html
+++ b/login.html
@@ -23,6 +23,7 @@
       <header class="fixed-top">
         <div class="menu-container"></div>
       </header>
+      <div id="account-info-container"></div>
       <section class="container login__form-section bg-white">
         <h1>Login</h1>
         <form class="login__form">
