Worked on three pages

--- a/my-account.html
+++ b/my-account.html
@@ -39,9 +39,11 @@
             />
           </div>
           <div class="avatar__message-container"></div>
+          <div class="update-avatar__message-container"></div>
           <button class="btn btn-primary mt-2">Update avatar</button>
         </form>
         <div class="current-avatar-container"></div>
+        <div class="current-avatar__message-container"></div>
       </section>
     </div>
     <footer></footer>
