Search field functionality on home page

--- a/auction-details.html
+++ b/auction-details.html
@@ -26,6 +26,7 @@
       <div id="account-info-container"></div>
       <section class="container auction__main-section bg-white">
         <div class="loader"></div>
+        <h1 class="auction-details-h1"></h1>
         <div class="auction__heading-and-images">
           <h1></h1>
           <div class="auction__main-image"></div>
